[JBJCA-579] [JBJCA-580] [JBJCA-581] Arquillian 1.0.0.Beta1, ShrinkWrap 1.0.0.Beta2 and ShrinkWrap Descriptors 1.0.0.Beta1